# LZW-Multimedia-Assignment

./: CMakeLists.txt  Decoder.cpp  Decoder.h  Decoder_Dictionary.txt  Decoding.txt  Encoder.cpp  Encoder.h  Encoder_Dictionary.txt  Encoding.txt  README.md  Utils.h  main.cpp
